alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,6 @@ body {
 }
 
 .card {
-  align-self: flex-start;
   display: flex;
   flex-direction: column;
   border-radius: 8px;
@@ -112,6 +111,7 @@ body {
 
 .attribution {
   position: absolute;
+  bottom: 1em;
   font-size: 11px;
   text-align: center;
   z-index: -1;
